--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -250,7 +250,7 @@ associations=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedC
     ?relationship a owl:AnnotationProperty . \
     ?relatedConcept a owl:Class . \
     OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-    ?relatedConcept #{codeCode} ?relatedConceptCode \
+    ?relatedConcept #{codeCode} ?relatedConceptCode . \
     OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
     OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
   } \
@@ -270,7 +270,7 @@ associations.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relation
     ?relationship a owl:AnnotationProperty . \
     ?relatedConcept a owl:Class . \
     OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-    ?relatedConcept #{codeCode} ?relatedConceptCode \
+    ?relatedConcept #{codeCode} ?relatedConceptCode . \
     OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
     OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
   } \
@@ -278,6 +278,39 @@ associations.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relation
 #    ?relationship rdfs:range ?y_range \
 #  FILTER (str(?y_range)="http://www.w3.org/2001/XMLSchema#anyURI") \
 #ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
+
+associations.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
+{ GRAPH <#{namedGraph}> \
+  { \
+    ?x_concept a owl:Class . \
+    ?x_concept #{codeCode} ?conceptCode . \
+    OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
+    ?x_concept ?relationship ?relatedConcept . \
+    ?relationship a owl:AnnotationProperty . \
+    ?relatedConcept a owl:Class . \
+    OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+    ?relatedConcept #{codeCode} ?relatedConceptCode . \
+    OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+    OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+  } \
+}
+
+# nothing optional for NCIt.
+associations.all.ncit=SELECT ?conceptCode ?conceptLabel ?relationshipCode ?relationshipLabel ?relatedConceptCode ?relatedConceptLabel \
+{ GRAPH <#{namedGraph}> \
+  { \
+    ?x_concept a owl:Class . \
+    ?x_concept #{codeCode} ?conceptCode . \
+    ?x_concept #{preferredNameCode} ?conceptLabel . \
+    ?x_concept ?relationship ?relatedConcept . \
+    ?relationship a owl:AnnotationProperty . \
+    ?relatedConcept a owl:Class . \
+    ?relatedConcept #{preferredNameCode} ?relatedConceptLabel . \
+    ?relatedConcept #{codeCode} ?relatedConceptCode . \
+    ?relationship #{preferredNameCode} ?relationshipLabel . \
+    ?relationship #{codeCode} ?relationshipCode . \
+  } \
+}
 
 # ?concept and ?relatedConcept both must have a code
 inverse.associations=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
@@ -323,6 +356,7 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
 { GRAPH <#{namedGraph}> \
   { \
     { \
+      ?relatedConcept a owl:Class . \
       ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -336,10 +370,24 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
     } \
     UNION \
     { \
-      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf)/ \
+      ?relatedConcept a owl:Class . \
+      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?x_concept . \
+      ?x_concept a owl:Class . \
+      ?x_concept #{codeCode} "#{conceptCode}" . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+    } \
+    UNION \
+    { \
+      ?relatedConcept a owl:Class . \
+      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
+          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -360,6 +408,7 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
 inverse.roles.chebi=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 { GRAPH <#{namedGraph}> \
   { \
+    ?relatedConcept a owl:Class . \
     ?relatedConcept rdfs:subClassOf ?z1 . \
     ?z1 a owl:Restriction . \
     ?z1 owl:onProperty ?relationship . \
@@ -378,7 +427,7 @@ inverse.roles.chebi=SELECT ?relationship ?relationshipCode ?relationshipLabel ?r
 inverse.roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
-    { \
+      ?relatedConcept a owl:Class . \
       ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -390,51 +439,17 @@ inverse.roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relatio
       ?relatedConcept #{codeCode} ?relatedConceptCode . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-    } \
-    UNION \
-    { \
-      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf)/ \
-        ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
-        ) ?rs . \
-      ?rs a owl:Restriction . \
-      ?rs owl:onProperty ?relationship . \
-      ?rs owl:someValuesFrom ?x_concept . \
-      ?x_concept a owl:Class . \
-      ?x_concept #{codeCode} ?conceptCode . \
-      FILTER (?conceptCode IN (#{inClause})) . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept #{codeCode} ?relatedConceptCode . \
-      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
-      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-    } \
   } \
 }
 #           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
-
-inverse.roles.batch.chebi=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
-{ GRAPH <#{namedGraph}> \
-    { \
-      ?relatedConcept rdfs:subClassOf ?rs . \
-      ?rs a owl:Restriction . \
-      ?rs owl:onProperty ?relationship . \
-      ?rs owl:someValuesFrom ?x_concept . \
-      ?x_concept a owl:Class . \
-      ?x_concept #{codeCode} ?conceptCode . \
-      FILTER (?conceptCode IN (#{inClause})) . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept #{codeCode} ?relatedConceptCode . \
-      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
-      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-    } \
-}
 
 # ?concept and ?relatedConcept both must have a code
 roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode  \
 { GRAPH <#{namedGraph}> \
   { \
-    { ?x_concept #{codeCode} "#{conceptCode}" . \
+    { \
+      ?x_concept a owl:Class . \
+      ?x_concept #{codeCode} "#{conceptCode}" . \
       ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -446,11 +461,26 @@ roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept 
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
     } \
     UNION \
-    { ?x_concept #{codeCode} "#{conceptCode}" . \
-      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/ \
+    { \
+      ?x_concept a owl:Class . \
+      ?x_concept #{codeCode} "#{conceptCode}" . \
+      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?relatedConcept . \
+      ?relatedConcept a owl:Class . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+    } \
+    UNION \
+    { \
+      ?x_concept a owl:Class . \
+      ?x_concept #{codeCode} "#{conceptCode}" . \
+      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
+          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -470,6 +500,7 @@ roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept 
 roles.chebi=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode  \
 { GRAPH <#{namedGraph}> \
   { \
+    ?x_concept a owl:Class . \
     ?x_concept rdfs:subClassOf ?rs . \
     ?x_concept #{codeCode} "#{conceptCode}" . \
     ?rs a owl:Restriction . \
@@ -488,7 +519,7 @@ roles.chebi=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedCo
 roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 { GRAPH <#{namedGraph}> \
   { \
-    { \
+      ?x_concept a owl:Class . \
       ?x_concept #{codeCode} ?conceptCode . \
       FILTER (?conceptCode IN (#{inClause})) . \
       ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
@@ -500,54 +531,37 @@ roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLab
       ?relatedConcept #{codeCode} ?relatedConceptCode . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-    } \
-    UNION \
-    { \
-      ?x_concept #{codeCode} ?conceptCode . \
-      FILTER (?conceptCode IN (#{inClause})) . \
-      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/ \
-        ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
-        ) ?rs . \
-      ?rs a owl:Restriction . \
-      ?rs owl:onProperty ?relationship . \
-      ?rs owl:someValuesFrom ?relatedConcept . \
-      ?relatedConcept a owl:Class . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept #{codeCode} ?relatedConceptCode . \
-      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
-      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-    } \
   } \
 }
 #          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
 # ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
 # ?concept and ?relatedConcept both must have a code
-roles.batch.chebi=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
-{ GRAPH <#{namedGraph}> \
-    { \
-      ?x_concept #{codeCode} ?conceptCode . \
-      FILTER (?conceptCode IN (#{inClause})) . \
-      ?x_concept rdfs:subClassOf ?rs . \
-      ?rs a owl:Restriction . \
-      ?rs owl:onProperty ?relationship . \
-      ?rs owl:someValuesFrom ?relatedConcept . \
-      ?relatedConcept a owl:Class . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept #{codeCode} ?relatedConceptCode . \
-      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
-      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-    } \
-}
-
-# ?concept and ?relatedConcept both must have a code
 roles.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
+    ?x_concept a owl:Class . \
+    ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+    ?rs a owl:Restriction . \
+    ?rs owl:onProperty ?relationship . \
+    ?rs owl:someValuesFrom ?relatedConcept . \
+    ?relatedConcept a owl:Class . \
+    OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
+    ?x_concept #{codeCode} ?conceptCode . \
+    OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+    ?relatedConcept #{codeCode} ?relatedConceptCode . \
+    OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+    OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+  } \
+}
+
+# ?concept and ?relatedConcept both must have a code
+roles.all.complex=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
+{ GRAPH <#{namedGraph}> \
+  { \
     { \
-      ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+      ?x_concept a owl:Class . \
+      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?relatedConcept . \
@@ -561,10 +575,10 @@ roles.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?rel
     } \
     UNION \
     { \
-      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/ \
+      ?x_concept a owl:Class . \
+      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
+          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -579,26 +593,8 @@ roles.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?rel
     } \
   } \
 }
-#          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
-# ?concept and ?relatedConcept both must have a code
-roles.all.chebi=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
-{ GRAPH <#{namedGraph}> \
-  { \
-    { \
-      ?x_concept rdfs:subClassOf ?rs . \
-      ?rs a owl:Restriction . \
-      ?rs owl:onProperty ?relationship . \
-      ?rs owl:someValuesFrom ?relatedConcept . \
-      ?relatedConcept a owl:Class . \
-      OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
-      ?x_concept #{codeCode} ?conceptCode . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept #{codeCode} ?relatedConceptCode . \
-      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
-      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-    } \
-  } \
-}
+
+roles.all.complex.chebi=SKIP
 
 # relationship label is bound to "disjointWith"
 disjoint.with=SELECT ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
