Get queries passing QA

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -283,8 +283,8 @@ associations.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCo
 { GRAPH <#{namedGraph}> \
   { \
     ?x_concept a owl:Class . \
-    ?x_concept #{codeCode} ?conceptCode . \
     OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
+    ?x_concept #{codeCode} ?conceptCode . \
     ?x_concept ?relationship ?relatedConcept . \
     ?relationship a owl:AnnotationProperty . \
     ?relatedConcept a owl:Class . \
@@ -300,15 +300,15 @@ associations.all.ncit=SELECT ?conceptCode ?conceptLabel ?relationshipCode ?relat
 { GRAPH <#{namedGraph}> \
   { \
     ?x_concept a owl:Class . \
-    ?x_concept #{codeCode} ?conceptCode . \
     ?x_concept #{preferredNameCode} ?conceptLabel . \
-    ?x_concept ?relationship ?relatedConcept . \
-    ?relationship a owl:AnnotationProperty . \
-    ?relatedConcept a owl:Class . \
-    ?relatedConcept #{preferredNameCode} ?relatedConceptLabel . \
-    ?relatedConcept #{codeCode} ?relatedConceptCode . \
-    ?relationship #{preferredNameCode} ?relationshipLabel . \
-    ?relationship #{codeCode} ?relationshipCode . \
+    ?x_concept #{codeCode} ?conceptCode . \
+    ?x_concept ?x_relationship ?x_relatedConcept . \
+    ?x_relationship a owl:AnnotationProperty . \
+    ?x_relatedConcept a owl:Class . \
+    ?x_relatedConcept #{preferredNameCode} ?relatedConceptLabel . \
+    ?x_relatedConcept #{codeCode} ?relatedConceptCode . \
+    ?x_relationship #{preferredNameCode} ?relationshipLabel . \
+    ?x_relationship #{codeCode} ?relationshipCode . \
   } \
 }
 
@@ -322,7 +322,7 @@ inverse.associations=SELECT ?relationship ?relationshipCode ?relationshipLabel ?
     ?relationship a owl:AnnotationProperty . \
     ?relatedConcept a owl:Class . \
     OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-    ?relatedConcept #{codeCode} ?relatedConceptCode \
+    ?relatedConcept #{codeCode} ?relatedConceptCode . \
     OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
     OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
   } \
@@ -342,7 +342,7 @@ inverse.associations.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?
     ?relationship a owl:AnnotationProperty . \
     ?relatedConcept a owl:Class . \
     OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-    ?relatedConcept #{codeCode} ?relatedConceptCode \
+    ?relatedConcept #{codeCode} ?relatedConceptCode . \
     OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
     OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
   } \
