--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -15,7 +15,7 @@ spring:
         jcache:
             config: classpath:ehcache.xml
 	sampleTest:
-		ncit: ncit.txt
-		chebi: chebi.txt
-		go: go.txt
-		hgnc: hgnc.txt
+		ncit: ThesaurusInferred_monthly_Sampling_OWL.txt
+		chebi: chebi_Sampling_OWL.txt
+		go: go_Sampling_OWL.txt
+		hgnc: hgnc_Sampling_OWL.txt
