Redo associations query for ncit to require codes/names

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -797,3 +797,18 @@ association.entries=SELECT DISTINCT ?concept ?conceptCode ?conceptLabel ?related
 }
 #     ?y rdfs:range ?y_range \
 #  FILTER (str(?y_range)=\"http://www.w3.org/2001/XMLSchema#anyURI\") \
+
+association.entries.ncit=SELECT DISTINCT ?concept ?conceptCode ?conceptLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
+{ GRAPH <#{namedGraph}> \
+  { \
+    ?concept a owl:Class . \
+    ?y a owl:AnnotationProperty . \
+    ?concept ?y ?relatedConcept . \
+    ?relatedConcept a owl:Class . \
+    ?y #{codeCode} "#{conceptCode}" . \
+    ?concept #{preferredNameCode} ?conceptLabel . \
+    ?concept #{codeCode} ?conceptCode . \
+    ?relatedConcept #{preferredNameCode} ?relatedConceptLabel . \
+    ?relatedConcept #{codeCode} ?relatedConceptCode . \
+  } \
+}
