Add comment to clarify order of clauses

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -279,6 +279,7 @@ associations.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relation
 #  FILTER (str(?y_range)="http://www.w3.org/2001/XMLSchema#anyURI") \
 #ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
+# Here, keep all the optional clauses at the end otherwise the query times out on NCI dev
 associations.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
