Initial fixes for unit test errors

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -24,13 +24,17 @@ PREFIX GO:<http://purl.obolibrary.org/obo/go.owl>
 
 all.graph.names=SELECT DISTINT ?graphName { graph ?graphName {?s ?p ?o} }
 
-all.graphs.and.versions=SELECT DISTINCT ?source ?graphName ?version ?date \
+# This assumes if owl:versionInfo is present there is at most one rdfs:comment
+# otherwise, the ?comment is picked up via the "description" field in the config .json file
+# this needs to be checked for new terminologies.
+all.graphs.and.versions=SELECT DISTINCT ?source ?graphName ?version ?date ?comment \
 { GRAPH ?graphName \
   { \
     { \
       ?source a owl:Ontology . \
       ?source owl:versionInfo ?version \
       OPTIONAL { ?source (dc:date|oboInOwl:date) ?date } \
+      OPTIONAL { ?source (rdfs:comment) ?comment} \
     } \
     UNION \
     { \
