Work through HGNC stardog timeout

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -571,10 +571,10 @@ roles.all.complex=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipC
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?relatedConcept . \
       ?relatedConcept a owl:Class . \
-      OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
       ?x_concept #{codeCode} ?conceptCode . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
       ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
     } \
@@ -589,10 +589,10 @@ roles.all.complex=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipC
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?relatedConcept . \
       ?relatedConcept a owl:Class . \
-      OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
       ?x_concept #{codeCode} ?conceptCode . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
       ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
     } \
@@ -600,6 +600,7 @@ roles.all.complex=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipC
 }
 
 roles.all.complex.chebi=SKIP
+roles.all.complex.hgnc=SKIP
 
 # relationship label is bound to "disjointWith"
 disjoint.with=SELECT ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
