Some tuning to get reports working

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -376,7 +376,8 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
     UNION \
     { \
       ?relatedConcept a owl:Class . \
-      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
+      ?relatedConcept owl:equivalentClass ?z . \
+      ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?x_concept . \
@@ -390,7 +391,41 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
     UNION \
     { \
       ?relatedConcept a owl:Class . \
-      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
+      ?relatedConcept rdfs:subClassOf ? z . \
+      ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?x_concept . \
+      ?x_concept a owl:Class . \
+      ?x_concept #{codeCode} "#{conceptCode}" . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+    } \
+    UNION \
+    { \
+      ?relatedConcept a owl:Class . \
+      ?relatedConcept owl:equivalentClass ?z . \
+      ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
+        ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
+          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
+        ) ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?x_concept . \
+      ?x_concept a owl:Class . \
+      ?x_concept #{codeCode} "#{conceptCode}" . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+    } \
+    UNION \
+    { \
+      ?relatedConcept a owl:Class . \
+      ?relatedConcept rdfs:subClassOf ?z . \
+      ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ) ?rs . \
@@ -469,7 +504,8 @@ roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept 
     { \
       ?x_concept a owl:Class . \
       ?x_concept #{codeCode} "#{conceptCode}" . \
-      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
+      ?x_concept owl:equivalentClass ?z . \
+      ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?relatedConcept . \
@@ -483,7 +519,41 @@ roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept 
     { \
       ?x_concept a owl:Class . \
       ?x_concept #{codeCode} "#{conceptCode}" . \
-      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
+      ?x_concept rdfs:subClassOf ?z . \
+      ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?relatedConcept . \
+      ?relatedConcept a owl:Class . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+    } \
+    UNION \
+    { \
+      ?x_concept a owl:Class . \
+      ?x_concept #{codeCode} "#{conceptCode}" . \
+      ?x_concept owl:equivalentClass ?z . \
+      ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
+        ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
+          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
+        ) ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?relatedConcept . \
+      ?relatedConcept a owl:Class . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+    } \
+    UNION \
+    { \
+      ?x_concept a owl:Class . \
+      ?x_concept #{codeCode} "#{conceptCode}" . \
+      ?x_concept rdfs:subClassOf ?z . \
+      ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ) ?rs . \
