Reorg roles queries to run without timout

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -376,8 +376,8 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
     UNION \
     { \
       ?relatedConcept a owl:Class . \
-      ?relatedConcept owl:equivalentClass ?z . \
-      ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
+      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?z . \
+      ?z owl:unionOf/rdf:rest*/rdf:first ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?x_concept . \
@@ -391,8 +391,8 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
     UNION \
     { \
       ?relatedConcept a owl:Class . \
-      ?relatedConcept rdfs:subClassOf ? z . \
-      ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
+      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?z . \
+      ?z owl:intersectionOf/rdf:rest*/rdf:first ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?x_concept . \
@@ -406,10 +406,10 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
     UNION \
     { \
       ?relatedConcept a owl:Class . \
-      ?relatedConcept owl:equivalentClass ?z . \
+      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?z . \
       ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
-        ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
+        ( owl:unionOf/rdf:rest*/rdf:first | \
+          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/owl:unionOf/rdf:rest*/rdf:first \
         ) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -424,10 +424,10 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
     UNION \
     { \
       ?relatedConcept a owl:Class . \
-      ?relatedConcept rdfs:subClassOf ?z . \
+      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?z . \
       ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
-        ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
+        ( owl:intersectionOf/rdf:rest*/rdf:first | \
+          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/owl:intersectionOf/rdf:rest*/rdf:first \
         ) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
